css linking to real file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My awesome portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
         <nav class="flex items-center justify-between">
             <div class="left flex items-center">  
                 <div class="branding">
-                    <img src="./images/logo.svg" alt="">
+                    <img src="./images/logo.svg" alt="Logo Img">
                 </div>
                 <div>
                     <a href="#">Home</a>
